Add team member Melika Shorki to the project

--- a/Mini_assignment_C2.ipynb
+++ b/Mini_assignment_C2.ipynb
@@ -11,6 +11,7 @@
     "Team Members:\n",
     "* Faraiba Farnan Tabinda\n",
     "* Maleha Afzal\n",
+    "* Melika Shorki",
     "\n",
     "## 1. Introduction and Goal\n",
     "This project explores how different text representation methods influence recipe classification. The aim is to predict each recipe’s category based on its content.\n",
